--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <html><head></head><body>This is a testhihihih</body></html>
+<a target=_blank href="https://github.com/gjj08519/gjj08519.github.io"download>
