--- a/1831989.html
+++ b/1831989.html
@@ -34,9 +34,7 @@
        > 
         Download from : <span> . github.io</span>
     </a> 
-     <a href="./1831989_ModernSolutions.ps1" download>
-        Download File Here directly
-
+    <a target=_blank href="https://github.com/gjj08519/gjj08519.github.io/blob/master/1831989_ModernSolutions.ps1"download>
      </a>
 
   </div>
