--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <main>
             <div class="img">
                 <div id="img">
-                    <img  src="./small_image.jpg" >
+                    <img  src="./assets/small_image.jpg" 
+                    srcset="./assets/small_image.jpg 300w,
+                    ./assets/medium_image.jpg 600w,
+                    ./assets/large_image.jpg 1200w">
                       
                 </div>
                 <div>
