--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -29,7 +30,7 @@
                     ./assets/large_image.jpg 1200w">
                       
                 </div>
-                <div>
+                <div id="imgt">
                   <h1>About Me</h1>
                 </div>
               
